# enterprise-decision-intelligence-platform

./: .gitignore  README.md  architecture.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  submission.md
backend/: .env.example  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  run_all.ps1
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/base/: __init__.py  agent.py  exceptions.py
backend/app/agents/explanation/: __init__.py  agent.py
backend/app/agents/learner/: __init__.py  agent.py
backend/app/agents/models/: __init__.py  explanation.py  learner.py  reasoning.py  recommendation.py  retriever.py  validation.py
backend/app/agents/planner/: __init__.py  exceptions.py  planner.py  schemas.py
backend/app/agents/reasoning/: __init__.py  agent.py
backend/app/agents/recommendation/: __init__.py  agent.py
backend/app/agents/retriever/: __init__.py  agent.py
backend/app/agents/rule_checker/: __init__.py  agent.py  engine.py
backend/app/ai/: __init__.py  exceptions.py  manager.py
backend/app/ai/prompts/: __init__.py  manager.py
backend/app/ai/providers/: __init__.py  base.py  openai_provider.py
backend/app/api/: __init__.py  dependencies.py  exception_handlers.py  middleware.py  router.py
backend/app/api/v1/: auth.py  business_rules.py  decisions.py  health.py  knowledge.py  organizations.py  workspaces.py
backend/app/auth/: dependencies.py  exceptions.py  jwt.py  models.py  password.py  permissions.py  schemas.py  service.py
backend/app/config/: settings.py
backend/app/core/: constants.py  container.py  exceptions.py  logging.py  metrics.py  routes.py
backend/app/knowledge/: __init__.py
backend/app/memory/: __init__.py
backend/app/models/: __init__.py  base.py  business_rule.py  conversation.py  decision_history.py  enums.py  knowledge_asset.py  knowledge_schema.py  lifecycle_definition.py  organization.py  preference_profile.py  recommendation.py  user.py  workspace.py
backend/app/orchestrator/: __init__.py
backend/app/persistence/: __init__.py
backend/app/prompts/: __init__.py
backend/app/repositories/: __init__.py
backend/app/services/: __init__.py
backend/app/utils/: __init__.py
backend/app/workflow/: __init__.py  context.py  events.py  exceptions.py  graph.py  models.py  registry.py  runtime.py
backend/docker/: Dockerfile.dev
backend/scratch/: fix_indexes.py
backend/scripts/: clean_db.py  cleanup_corrupted_chunks.py  debug_500.py  demo_data.py  lint.sh  platform_cli.py  start.sh  test.sh  test_inputs.txt  verify_agents.py  verify_ai_layer.py  verify_api.py  verify_auth.py  verify_document_analysis.py  verify_knowledge_layer.py  verify_pdf_extraction.py  verify_planner.py  verify_runtime.py  verify_workspace_import.py
backend/tests/: __init__.py  test_observability.py  test_settings.py  test_smoke.py
(+113 files in other folders)
